--- a/responsive.html
+++ b/responsive.html
@@ -26,11 +26,13 @@
                 </ul>
             </div>
             <div class="main-header">
-                <h1>Welcome to our page</h1>
-                <p>
-                    Click the bottom below to become a member
-                </p>
-                <a href="#">Become a member</a>
+                <div class="main-header-box">
+                    <h1>Welcome to our page</h1>
+                    <p>
+                        Click the bottom below to become a member
+                    </p>
+                    <a href="#">Become a member</a>
+                </div>
             </div>
         </div>
     </section>
