--- a/responsive.html
+++ b/responsive.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
+    integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q"
+    crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
@@ -14,16 +18,20 @@
                     <h1 class="navbar-logo">Fadi Smoqy</h1>
                 </div>
                 <ul class="menu-items">
-                    <li><a class="item1" href="#">Home</a></li>
-                    <li><a class="item3" href="#">About us</a></li>
-                    <li><a class="item4" href="#">Location</a></li>
-                    <li><a class="item2" href="#">Contact</a>
-                        <ul class="item2-ul">
-                            <li class="item2-li1 item2-li"><a href="#">Phone</a></li>
-                            <li class="item2-li2 item2-li"><a href="#">Email</a></li>
-                        </ul>
-                    </li>
+                    <div class="menu-box">
+                        <span class="ger x-icon"> <i class="fas fa-times-circle"></i></span>
+                        <li><a class="item1" href="#">Home</a></li>
+                        <li><a class="item3" href="#">About us</a></li>
+                        <li><a class="item4" href="#">Location</a></li>
+                        <li><a class="item2" href="#">Contact</a>
+                            <ul class="item2-ul">
+                                <li class="item2-li1 item2-li"><a href="#">Phone</a></li>
+                                <li class="item2-li2 item2-li"><a href="#">Email</a></li>
+                            </ul>
+                        </li>
+                    </div>
                 </ul>
+                <span  class="ger burger"><i class="fas fa-bars"></i></span >
             </div>
             <div class="main-header">
                 <div class="main-header-box">
@@ -35,6 +43,11 @@
                 </div>
             </div>
         </div>
+
+
+
+
+        <script src="responsive.js"></script>
     </section>
 </body>
 </html>
